# pyproc

./: .gitignore  .golangci.yml  .lychee.toml  CHANGELOG.md  LICENSE  Makefile  Makefile.ci  README.md  config.yaml  go.mod  go.sum
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
.serena/: project.yml
.serena/cache/go/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: project_overview.md  tech_stack_conventions.md
api/v1/: pyproc.pb.go  pyproc.proto  pyproc_grpc.pb.go
bench/: README.md  benchmark_test.go  pool_benchmark_test.go  rpc_comparison_benchmark_test.go
bench/python_servers/: base_server.py  jsonrpc_server.py  msgpack_server.py  requirements.txt  xmlrpc_server.py
bench/rpc_clients/: interface.go  jsonrpc_client.go  msgpack_client.go  pyproc_client.go  xmlrpc_client.go
cmd/pyproc/: main.go
cmd/pyproc/templates/: Makefile.tmpl  README.md.tmpl  go.mod.tmpl  main.go.tmpl  requirements.txt.tmpl  scaffold_go.tmpl  scaffold_python.tmpl  worker.py.tmpl
docs/: codec-performance.md  design.md  ops.md  security.md
examples/basic/: README.md  main.go  worker.py
examples/cancellation/: worker.py
internal/framing/: frame.go  frame_test.go  framing.go  framing_test.go  integration_test.go
internal/protocol/: types.go
pkg/pyproc/: cancellation_test.go  codec.go  codec_json_default.go  codec_json_goccy.go  codec_json_segmentio.go  codec_msgpack.go  codec_test.go  config.go  connection.go  logger.go  pool.go  pool_generic.go  pool_generic_test.go  pool_metrics.go  pool_test.go  pool_transport.go  socket.go  socket_hmac.go  socket_security.go  socket_security_darwin.go  socket_security_linux.go  socket_security_test.go  socket_security_types.go  transport.go  transport_grpc.go  transport_multiplexed.go  transport_multiplexed_test.go  transport_test.go  transport_uds.go  worker.go  worker_test.go
worker/python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
worker/python/pyproc_worker/: __init__.py  cancellation.py  cli.py  codec.py  tracing.py
worker/python/tests/: __init__.py  test_codec.py  test_health.py  test_msgspec.py  test_tracing.py
