[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyproc-worker"
version = "0.1.0"
authors = [
    {name = "YuminosukeSato"},
]
description = "Python worker for pyproc - Call Python from Go without CGO"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
keywords = ["pyproc", "worker", "go", "python", "ipc", "rpc", "unix-socket"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
examples = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
]

[project.urls]
Homepage = "https://github.com/YuminosukeSato/pyproc"
Documentation = "https://github.com/YuminosukeSato/pyproc#readme"
Repository = "https://github.com/YuminosukeSato/pyproc"
Issues = "https://github.com/YuminosukeSato/pyproc/issues"

[project.scripts]
pyproc-worker = "pyproc_worker.cli:main"

[tool.setuptools]
packages = ["pyproc_worker"]

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["E501"]  # Line too long

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]